# gasp

./: .gitignore  LICENSE  README.md  SConstruct  environment.yml  pyproject.toml  requirements.txt  setup.py  travis_test.sh
gasp/: cosmo.py  marginallikelihoods.py  marginallikelihoods_jx.py  marginallikelihoods_tf.py  pca_utils_jx.py  photometry.py  photoz.py  stats.py
notebooks/: Test.ipynb
python/desc/gasp/: SConscript  __init__.py  gasp.py
setup/: setup.sh
tests/: test_cosmo.py  test_gasp.py  test_marginallikelihoods_jx.py  test_pca_utils_jx.py  test_photoz.py
