
[tool.poetry]
name = "gasp"
version = "0.1.0"
description = ""
authors = ["Boris Leistedt <b.leistedt@imperial.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ixkael/gasp"
repository = "https://github.com/ixkael/gasp"

[tool.poetry.dependencies]
python = "^3.8"
jaxlib = "^0.1.57"
click = "^7.1.2"
astropy = "^4.2"
scipy = "^1.5.4"
chex = "^0.0.3"
jax = "^0.2.7"
sedpy = { git = "https://github.com/bd-j/sedpy.git" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["gasp"]

[tool.coverage.report]
show_missing = true
